--- a/index.html
+++ b/index.html
@@ -21,12 +21,6 @@
                 <li><a href="about.html">About</a></li>
                 <li class="dropdown">
                     <a href="products.html">Products</a>
-                    <div class="dropdown-content">
-                        <a href="products.html#new-arrivals">New Arrivals</a>
-                        <a href="products.html#luxury">Luxury Collection</a>
-                        <a href="products.html#sport">Sport Watches</a>
-                        <a href="products.html#classic">Classic Timepieces</a>
-                    </div>
                 </li>
                 <li><a href="quote.html">Calculate Quote</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -41,11 +35,15 @@
         </nav>
     </header>
 
-    <section class="video-hero">
-        <video autoplay muted loop playsinline id="heroVideo">
-            <source src="./images/video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+    <section class="hero-section">
+        <div class="gif-container">
+            <img src="./images/fe7f1c6ee979dfc365665ef7eea73839.gif" alt="Luxury Watch Animation" class="hero-gif">
+            <div class="hero-content">
+                <h1>Luxury Timepieces</h1>
+                <p>Discover our exclusive collection of premium watches</p>
+                <a href="products.html" class="cta-button">Explore Collection</a>
+            </div>
+        </div>
     </section>
 
     <!-- Rest of your content -->
