--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="locations.html">Locations</a></li>
                 <li><a href="news.html">Industry News</a></li>
+                <li><a href="help.html">Help</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
