--- a/news.html
+++ b/news.html
@@ -28,6 +28,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="locations.html">Locations</a></li>
                 <li><a href="news.html" class="active">Industry News</a></li>
+                <li><a href="help.html">Help</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
