--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
                 <li><a href="contact.html" class="active">Contact</a></li>
                 <li><a href="locations.html">Locations</a></li>
                 <li><a href="news.html">Industry News</a></li>
+                <li><a href="help.html">Help</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
