--- a/locations.html
+++ b/locations.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Locations | Luxury Watches</title>
+    <title>Image Generator | Luxury Watches</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
     <script src="script.js" defer></script>
     <script src="locations.js" defer></script>
 </head>
@@ -29,6 +27,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="locations.html" class="active">Locations</a></li>
                 <li><a href="news.html">Industry News</a></li>
+                <li><a href="help.html">Help</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -40,21 +39,21 @@
 
     <main class="locations-content">
         <section class="locations-hero">
-            <h1>Find Our Nearest Location</h1>
-            <p>Discover our exclusive boutiques near beautiful waterfront locations</p>
+            <h1>Luxury Watch Image Generator</h1>
+            <p>Generate beautiful watch-themed images</p>
         </section>
 
         <div class="location-container">
-            <div class="location-finder">
-                <button id="getLocation" class="location-btn">
-                    <i class="fas fa-map-marker-alt"></i>
-                    Find Nearest Location
+            <!-- Random Image Generator Button -->
+            <div class="random-generator">
+                <button id="generateRandomBtn" class="cta-button">
+                    <i class="fas fa-random"></i> Generate Random Image
                 </button>
-                <div id="locationStatus" class="location-status"></div>
             </div>
 
+            <!-- Results Display -->
             <div id="locationResult" class="location-result">
-                <!-- Results will be dynamically inserted here -->
+                <!-- Generated images will appear here -->
             </div>
         </div>
     </main>
